@@ -1,47 +1,70 @@
 package com.ar.cac.SpringBank.services;
 
 
+import com.ar.cac.SpringBank.Exceptions.AccountNotFoundException;
+import com.ar.cac.SpringBank.Exceptions.InsufficientFoundsException;
+import com.ar.cac.SpringBank.Exceptions.UserNotFoundException;
 import com.ar.cac.SpringBank.entities.Account;
 import com.ar.cac.SpringBank.entities.dtos.AccountDto;
 import com.ar.cac.SpringBank.mappers.AccountMapper;
 import com.ar.cac.SpringBank.repositories.AccountRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class AccountService {
 
+    @Autowired
     private final AccountRepository repository;
 
-    private AccountService(AccountRepository repository){
-        this.repository=repository;
+    @Autowired
+    private final UserService userService;
+
+    public AccountService(AccountRepository repository, UserService userService) {
+
+        this.repository = repository;
+        this.userService = userService;
     }
+
     public List<AccountDto> getAccounts() {
+
         return repository.findAll().stream()
                 .map(AccountMapper::accountToDto)
-                .collect(Collectors.toList());
-
+                .toList();
     }
 
-    public AccountDto getAccountById(Long id) {
+    public AccountDto getAccountById(Long id) throws AccountNotFoundException {
 
-        Account acc= repository.findById(id).get();
-        return AccountMapper.accountToDto(acc);
+        /*Account acc = repository.findById(id).get();
+        return AccountMapper.accountToDto(acc);*/
+        // Refactor
 
+        return repository.findById(id)
+                .map(AccountMapper::accountToDto)
+                .orElseThrow(AccountNotFoundException::new);
     }
 
-    public AccountDto createAccount(AccountDto dto) {
-        dto.setAmount(BigDecimal.ZERO);
-        Account newAccount= AccountMapper.dtoToAccount(dto);
-        return AccountMapper.accountToDto(repository.save(newAccount));
+    public AccountDto createAccount(AccountDto dto) throws UserNotFoundException {
+
+        userService.checkExistUser(dto.getOwnerId());
+
+        // TODO: Se debería realizar mediante una Transaction, se buscaría el usuario, se crearía la cuenta y posteriormente se actualizaría el usuario.
+        //  Tener en cuenta que directamente se puede realizar un update del usuario con la nueva cuenta. Se aceptan sugerencias.
+
+        Account newAccount = AccountMapper.dtoToAccount(dto);
+        var entity = repository.save(newAccount);
+        return AccountMapper.accountToDto(entity);
     }
 
     public AccountDto updateAccount(Long id, AccountDto dto) {
-        if (repository.existsById(id)){
-            Account acc= repository.findById(id).get();
+
+        // TODO: Implementar Excepciones para cada error y devolverlas en el controller.
+
+        if (repository.existsById(id)) {
+            Account acc = repository.findById(id).get();
 
             if (dto.getAlias() != null) {
                 acc.setAlias(dto.getAlias());
@@ -60,18 +83,34 @@ public class AccountService {
             }
             return AccountMapper.accountToDto(acc);
 
-        }else {
+        } else {
 
             return null;
         }
     }
 
     public String deleteAccount(Long id) {
-        if (repository.existsById(id)){
+
+        // TODO: Falta implementar excepciones.
+        if (repository.existsById(id)) {
+
             repository.deleteById(id);
             return "Cuenta eliminada";
-        }else {
+        } else {
+
             return "No se pudo eliminar la cuenta";
         }
+    }
+
+    protected void checkExistAccount(Long id) throws AccountNotFoundException {
+
+        var result = repository.existsById(id);
+        if (result) throw new AccountNotFoundException();
+    }
+
+    protected void checkAmount(Long id, BigDecimal amount) throws InsufficientFoundsException {
+
+        var result = repository.existsByIdAndAmountGreaterThanEqual(id, amount);
+        if (result) throw new InsufficientFoundsException();
     }
 }
